--- a/CR_01.md
+++ b/CR_01.md
@@ -1,10 +1,13 @@
 # CR 3 Fingers 01
 
 Nom 
+
 Three fingers
+
 Participant Mohamed, Jafor, Pierre-Guillaume
 
-proposition, 
+proposition:
+ 
 site One page pour groupe de musique
 
 Axes de travail :
