--- a/CR_01.md
+++ b/CR_01.md
@@ -1,14 +1,12 @@
 # CR 3 Fingers 01
 
-Nom 
+Nom : Three fingers
 
-Three fingers
+Participants : Mohamed, Jafor, Pierre-Guillaume
 
-Participant Mohamed, Jafor, Pierre-Guillaume
+Proposition:
 
-proposition:
- 
-site One page pour groupe de musique
+site One page pour groupe de musique, adopté à l'unanimité.
 
 Axes de travail :
 
