--- a/CR_01.md
+++ b/CR_01.md
@@ -12,9 +12,7 @@ site One page pour groupe de musique, adopté à l'unanimité.
 
 Axes de travail :
 
-
 index.php
-
 
     * Présentation du groupe
     
@@ -36,3 +34,9 @@ index.php
         R   : Afficher les Calendrier avec les dates programmées
         U   : Marquer une date comme passée
         D   : Annuler une date
+
+## ETAPE 1
+
+Créer une page statique *UNIQUEMENT HTML ET CSS* contenant l'espace de présentation et le formulaire de contact.
+
+Le processus doit intégrer les 3 partcipants pour vérifier notre capacité a nous coordonner pour travailler ensemble sur un même fichier.
