ajout d'une image de fond temporaire

--- a/CR_02.md
+++ b/CR_02.md
@@ -16,5 +16,5 @@ Distribution des tâches :
 
 Réalisations du jour :
 
-    Html et CSS necessaire à un présentation visuel du projet, mais non foncionel.
+    Html et CSS necessaire à un présentation visuel du projet, mais non fonctionel.
     1er découpage du site.
